# glslcc-rs

./: Cargo.toml  readme.md
examples/: basic.rs  glslcc.rs  main.vert
src/: lib.rs
