[package]
name = "glslcc-rs"
version = "0.1.0"
edition = "2021"

license = "Apache-2.0"
repository = "https://github.com/zatrit/glslcc-rs"
description = "GLSL cross-compiler library written in Rust"
readme = "readme.md"

[dependencies]
shaderc = "0.8"
spirv_cross = "0.23"

[features]
default = ["glsl", "hlsl", "msl"]

glsl = ["spirv_cross/glsl"]
hlsl = ["spirv_cross/hlsl"]
msl = ["spirv_cross/msl"]

build-shaderc = ["shaderc/build-from-source"]
